// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`samplesReducer Adds a new sample correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "name": "test sample",
    "projectUuid": null,
    "species": null,
    "type": null,
    "uuid": "asd123",
  },
  "ids": Array [
    "asd123",
    "qwe234",
  ],
  "meta": Object {
    "error": false,
    "loading": true,
  },
  "qwe234": Object {
    "complete": false,
    "createdDate": "2021-01-02T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-02T14:48:00.000Z",
    "name": "test sample 2",
    "projectUuid": null,
    "species": null,
    "type": null,
    "uuid": "qwe234",
  },
}
`;

exports[`samplesReducer Inserts a new sample correctly 1`] = `
Object {
  "asd123": Object {
    "complete": false,
    "createdDate": "2021-01-01T14:48:00.000Z",
    "error": false,
    "fileNames": Array [],
    "files": Object {},
    "lastModified": "2021-01-01T14:48:00.000Z",
    "name": "test sample",
    "projectUuid": null,
    "species": null,
    "type": null,
    "uuid": "asd123",
  },
  "ids": Array [
    "asd123",
  ],
  "meta": Object {
    "error": false,
    "loading": true,
  },
}
`;
